# UCP-AGENT

./: README.md  pyproject.toml  run.py
app/: __main__.py  cmd.py
backend/: ap2_mandates.py  buyer_consent.py  constants.py  discount.py  embedded_checkout.py  embedded_checkout_routes.py  payment_processor.py  server.py  store.py  ucp_profile_resolver.py
backend/extensions/: __init__.py  a2a_extension.py  ucp_extension.py
backend/helpers/: __init__.py  type_generator.py
backend/host_agent/: __main__.py  agent.py  agent_executor.py
backend/mcp_server/: __init__.py  mcp_adapter.py  mcp_config.json  mcp_discovery.py  streamable_http_server.py
backend/mock_datas/: embedded-checkout.html  mcp.json  products.json  ucp.json
backend/models/: __init__.py
